[tool.poetry]
name = "ranked-doda"
version = "0.1.0"
description = ""
authors = ["vtroc7 <vtroc7@gmail.com >"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.0"
gspread = "^5.12.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
